fix: layout issues in mobile

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -120,10 +120,14 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html,
   body {
-    @apply bg-background text-foreground;
+    @apply h-dvh overflow-hidden;
   }
   html {
     @apply font-sans;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
